# rlay

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build.sh  initialize.sh  interactive.ipynb  mem_client.py  mem_client_T.py  mem_server.py  mem_server_T.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  proposal.yml
.github/workflows/: build-docs.yml  build.yml  docs-manual-versioning.yml  docs-versioning.yml
examples/: interactive.ipynb  mem_client.py  mem_client_T.py  mem_server.py  mmap_env_client.py  mmap_env_server.py  mmap_rl_client.py  mmap_rl_server.py
protos/gym_grpc/: gym_rlay.proto
rlay/: __init__.py  core.py  mmap_backends.py  mmap_envs.py  utils.py
rlay-rs/: Cargo.toml
rlay-rs/src/: backends.rs  core.rs  gym_environment.rs  gym_ferry.rs  gym_rlay.rs  main.rs  mod.rs
rlay/gym_grpc/: __init__.py  gym_rlay_pb2.py  gym_rlay_pb2.pyi
tests/: __init__.py  test_communication.py  test_communication_T.py  test_core.py
tests/helper/: environments.py  processes.py  profiler.py
tests/integration_tests/: test_mmap_to_mmap_rl_client.py  test_mmap_to_mmap_rl_server.py
tests/unit_tests/: test_core.py
